Minor bug fixes to homepage text (z-index) and base html (to ensure selected link displays active)

--- a/flaskbiob/static/main.css
+++ b/flaskbiob/static/main.css
@@ -122,4 +122,5 @@ figcaption{
 
 .sticky-offset{
     top: 70px;
+    z-index: -1;
 }
